# twitter_python

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
djangoPoetry/: settings.py  urls.py
user/: models.py
user/api/: serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_image_s3_path_user_is_blocked_user_role_and_more.py
