[tool.poetry]
name = "djangopoetry"
version = "0.1.0"
description = ""
authors = ["pavel.dzemidovich <dubstr1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
